@@ -1,0 +1,119 @@
+/*
+ * reshook.c - dnssec-trigger resolv.conf hooks for adjusting name resolution 
+ *
+ * Copyright (c) 2011, NLnet Labs. All rights reserved.
+ *
+ * This software is open source.
+ * 
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ * 
+ * Redistributions of source code must retain the above copyright notice,
+ * this list of conditions and the following disclaimer.
+ * 
+ * Redistributions in binary form must reproduce the above copyright notice,
+ * this list of conditions and the following disclaimer in the documentation
+ * and/or other materials provided with the distribution.
+ * 
+ * Neither the name of the NLNET LABS nor the names of its contributors may
+ * be used to endorse or promote products derived from this software without
+ * specific prior written permission.
+ * 
+ * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
+ * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
+ * TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
+ * PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE REGENTS OR CONTRIBUTORS BE
+ * LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+ * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+ * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+ * INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+ * CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+ * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+ * POSSIBILITY OF SUCH DAMAGE.
+ */
+
+/**
+ * \file
+ *
+ * This file contains the unbound hooks for adjusting the name resolution
+ * on the system (to 127.0.0.1).
+ */
+#include "config.h"
+#include <sys/stat.h>
+#include "reshook.h"
+#include "log.h"
+#include "cfg.h"
+#include "probe.h"
+
+static void prline(FILE* out, const char* line)
+{
+	int r = fprintf(out, line);
+	if(r < 0) {
+		log_err("cannot write resolvconf: %s", strerror(errno));
+	} else if(r != (int)strlen(line)) {
+		log_err("short write resolvconf: filesystem full?");
+	}
+}
+
+static FILE* open_rescf(struct cfg* cfg)
+{
+	FILE* out;
+	char line[1024];
+	if(chmod(cfg->resolvconf, 0644)<0) {
+		log_err("chmod(%s) failed: %s", cfg->resolvconf,
+			strerror(errno));
+	}
+	/* make resolv.conf writable */
+	out = fopen(cfg->resolvconf, "w");
+	if(!out) {
+		log_err("cannot open %s: %s", cfg->resolvconf, strerror(errno));
+		return NULL;
+	}
+	prline(out, "# Generated by " PACKAGE_STRING);
+	if(cfg->rescf_domain) {
+		snprintf(line, sizeof(line), "domain %s\n", cfg->rescf_domain);
+		prline(out, line);
+	}
+	if(cfg->rescf_search) {
+		snprintf(line, sizeof(line), "search %s\n", cfg->rescf_search);
+		prline(out, line);
+	}
+	return out;
+}
+
+static void close_rescf(struct cfg* cfg, FILE* out)
+{
+	fclose(out);
+	/* make resolv.conf readonly */
+	if(chmod(cfg->resolvconf, 0444)<0) {
+		log_err("chmod(%s) failed: %s", cfg->resolvconf,
+			strerror(errno));
+	}
+}
+
+void hook_resolv_localhost(struct cfg* cfg)
+{
+	FILE* out = open_rescf(cfg);
+	if(!out) return;
+	/* write the nameserver records */
+	prline(out, "nameserver 127.0.0.1\n");
+	close_rescf(cfg, out);
+}
+
+void hook_resolv_iplist(struct cfg* cfg, struct probe_ip* list)
+{
+	char line[1024];
+	FILE* out = open_rescf(cfg);
+	if(!out) return;
+	/* write the nameserver records */
+	while(list) {
+		if(!list->to_auth) {
+			snprintf(line, sizeof(line), "nameserver %s\n",
+				list->name);
+			prline(out, line);
+		}
+		list = list->next;
+	}
+	close_rescf(cfg, out);
+}
