@@ -7,6 +7,7 @@
 	- fix nice exit for panel on quit.
 	- present insecure or disconnect choice.
 	- unbound control hooks.
+	- resolv.conf hooks.
 
 15 Aug 2011: Wouter
 	- log with time in readable format (to logfile), detects strftime.
